crates/reap-pm-live/tests/ui/public_route_delivery_cannot_bypass_run.rs
use reap_pm_live::{PmLaneSet, PmPublicBookDelivery};

fn bypass_run(lanes: &mut PmLaneSet, delivery: PmPublicBookDelivery) {
    lanes.enqueue_pm_book(delivery).unwrap();
}

fn main() {}
